// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateStorageCode > Azure > basic connection with account key 1`] = `
"from obstore.store import AzureStore

store = AzureStore("my-container",
    account_name="storageaccount",
    account_key="base64accountkey==",
)"
`;

exports[`generateStorageCode > Azure > with secrets 1`] = `
"from obstore.store import AzureStore
import os

_account_name = os.environ.get("AZURE_ACCOUNT")
_account_key = os.environ.get("AZURE_KEY")
store = AzureStore("my-container",
    account_name=_account_name,
    account_key=_account_key,
)"
`;

exports[`generateStorageCode > Azure > without account key 1`] = `
"from obstore.store import AzureStore

store = AzureStore("my-container",
    account_name="storageaccount",
)"
`;

exports[`generateStorageCode > CoreWeave > basic connection with all fields 1`] = `
"from obstore.store import S3Store

store = S3Store("operator-bucket",
    region="US-EAST-04A",
    access_key_id="AKIAIOSFODNN7EXAMPLE",
    secret_access_key="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
    endpoint="https://operator-bucket.cwobject.com",
    virtual_hosted_style_request=True,
)"
`;

exports[`generateStorageCode > CoreWeave > minimal connection (bucket and region only) 1`] = `
"from obstore.store import S3Store

store = S3Store("operator-bucket",
    region="US-EAST-04A",
    endpoint="https://operator-bucket.cwobject.com",
    virtual_hosted_style_request=True,
)"
`;

exports[`generateStorageCode > CoreWeave > with container credentials 1`] = `
"from obstore.store import S3Store
import os

_container_credentials_full_uri = os.environ.get("AWS_CONTAINER_CREDENTIALS_FULL_URI")
_container_authorization_token_file = os.environ.get("AWS_CONTAINER_AUTHORIZATION_TOKEN_FILE")
store = S3Store("operator-bucket",
    region="US-EAST-04A",
    container_credentials_full_uri=_container_credentials_full_uri,
    container_authorization_token_file=_container_authorization_token_file,
    endpoint="https://operator-bucket.cwobject.com",
    virtual_hosted_style_request=True,
)"
`;

exports[`generateStorageCode > CoreWeave > with secrets 1`] = `
"from obstore.store import S3Store
import os

_access_key_id = os.environ.get("COREWEAVE_OBJECT_STORAGE_KEY")
_secret_access_key = os.environ.get("COREWEAVE_OBJECT_STORAGE_SECRET")
store = S3Store("operator-bucket",
    region="US-EAST-04A",
    access_key_id=_access_key_id,
    secret_access_key=_secret_access_key,
    endpoint="https://operator-bucket.cwobject.com",
    virtual_hosted_style_request=True,
)"
`;

exports[`generateStorageCode > GCS > with service account key 1`] = `
"from obstore.store import GCSStore
import json

_credentials = json.loads(r"""{"type": "service_account", "project_id": "test"}""")
store = GCSStore("my-bucket",
    service_account_key=_credentials,
)"
`;

exports[`generateStorageCode > GCS > with service account key from a file path 1`] = `
"from obstore.store import GCSStore

store = GCSStore("my-bucket",
    service_account_path="/etc/secrets/gcs.json",
)"
`;

exports[`generateStorageCode > GCS > with service account key from secrets 1`] = `
"from obstore.store import GCSStore
import json
import os

_service_account_key = os.environ.get("GCS_SERVICE_ACCOUNT_KEY")
_credentials = json.loads(_service_account_key)
store = GCSStore("my-bucket",
    service_account_key=_credentials,
)"
`;

exports[`generateStorageCode > GCS > without service account key (default credentials) 1`] = `
"from obstore.store import GCSStore

store = GCSStore("my-bucket")"
`;

exports[`generateStorageCode > GitHub > escapes quotes and backslashes in sha 1`] = `
"from fsspec.implementations.github import GithubFileSystem

fs = GithubFileSystem(
    org="marimo-team",
    repo="marimo",
    sha="foo\\\\\\"bar",
)"
`;

exports[`generateStorageCode > GitHub > public repo 1`] = `
"from fsspec.implementations.github import GithubFileSystem

fs = GithubFileSystem(
    org="marimo-team",
    repo="marimo",
)"
`;

exports[`generateStorageCode > GitHub > with sha 1`] = `
"from fsspec.implementations.github import GithubFileSystem

fs = GithubFileSystem(
    org="marimo-team",
    repo="marimo",
    sha="main",
)"
`;

exports[`generateStorageCode > GitHub > with username and token 1`] = `
"from fsspec.implementations.github import GithubFileSystem

fs = GithubFileSystem(
    org="marimo-team",
    repo="marimo",
    username="octocat",
    token="ghp_example",
)"
`;

exports[`generateStorageCode > GitHub > with username and token from secrets 1`] = `
"from fsspec.implementations.github import GithubFileSystem
import os

_token = os.environ.get("GITHUB_TOKEN")
fs = GithubFileSystem(
    org="marimo-team",
    repo="marimo",
    username="octocat",
    token=_token,
)"
`;

exports[`generateStorageCode > Google Drive > with default auth (no credentials) 1`] = `
"from gdrive_fsspec import GoogleDriveFileSystem

fs = GoogleDriveFileSystem(use_listings_cache=False, skip_instance_cache=True)"
`;

exports[`generateStorageCode > Google Drive > with embedded auth (no credentials) 1`] = `
"from gdrive_fsspec import GoogleDriveFileSystem

fs = GoogleDriveFileSystem(use_listings_cache=False, skip_instance_cache=True, auth_kwargs={"use_local_webserver": False})
mo.output.clear_console()"
`;

exports[`generateStorageCode > Google Drive > with service account credentials 1`] = `
"from gdrive_fsspec import GoogleDriveFileSystem
import json

_creds = json.loads(r"""{"type": "service_account", "client_email": "test@test.iam.gserviceaccount.com"}""")
fs = GoogleDriveFileSystem(creds=_creds, token="service_account", use_listings_cache=False, skip_instance_cache=True)"
`;

exports[`generateStorageCode > Google Drive > with service account credentials from a file path 1`] = `
"from gdrive_fsspec import GoogleDriveFileSystem

fs = GoogleDriveFileSystem(creds="/etc/secrets/gdrive.json", token="service_account", use_listings_cache=False, skip_instance_cache=True)"
`;

exports[`generateStorageCode > Google Drive > with service account credentials from secrets 1`] = `
"from gdrive_fsspec import GoogleDriveFileSystem
import json
import os

_credentials_json = os.environ.get("GDRIVE_CREDENTIALS_JSON")
_creds = json.loads(_credentials_json)
fs = GoogleDriveFileSystem(creds=_creds, token="service_account", use_listings_cache=False, skip_instance_cache=True)"
`;

exports[`generateStorageCode > Hugging Face > default connection 1`] = `
"from huggingface_hub import HfApi

hf = HfApi()"
`;

exports[`generateStorageCode > Hugging Face > with token from secrets 1`] = `
"from huggingface_hub import HfApi
import os

_token = os.environ.get("HF_TOKEN")
hf = HfApi(token=_token)"
`;

exports[`generateStorageCode > S3 > basic connection with all fields 1`] = `
"from obstore.store import S3Store

store = S3Store("my-bucket",
    region="us-east-1",
    access_key_id="AKIAIOSFODNN7EXAMPLE",
    secret_access_key="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
)"
`;

exports[`generateStorageCode > S3 > minimal connection (bucket only) 1`] = `
"from obstore.store import S3Store

store = S3Store("my-bucket",)"
`;

exports[`generateStorageCode > S3 > with container credentials 1`] = `
"from obstore.store import S3Store

store = S3Store("my-bucket",
    region="us-east-1",
    container_credentials_full_uri="http://169.254.170.23/v1/credentials",
    container_authorization_token_file="/var/run/secrets/token",
)"
`;

exports[`generateStorageCode > S3 > with container credentials from secrets 1`] = `
"from obstore.store import S3Store
import os

_container_credentials_full_uri = os.environ.get("AWS_CONTAINER_CREDENTIALS_FULL_URI")
_container_authorization_token_file = os.environ.get("AWS_CONTAINER_AUTHORIZATION_TOKEN_FILE")
store = S3Store("my-bucket",
    region="us-east-1",
    container_credentials_full_uri=_container_credentials_full_uri,
    container_authorization_token_file=_container_authorization_token_file,
)"
`;

exports[`generateStorageCode > S3 > with custom endpoint 1`] = `
"from obstore.store import S3Store

store = S3Store("my-bucket",
    region="us-east-1",
    access_key_id="AKIAIOSFODNN7EXAMPLE",
    secret_access_key="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
    endpoint_url="https://minio.example.com:9000",
)"
`;

exports[`generateStorageCode > S3 > with plain-http endpoint 1`] = `
"from obstore.store import S3Store

store = S3Store("my-bucket",
    region="us-east-1",
    access_key_id="AKIAIOSFODNN7EXAMPLE",
    secret_access_key="wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
    endpoint_url="http://cwlota.com",
    allow_http=True,
)"
`;

exports[`generateStorageCode > S3 > with secrets 1`] = `
"from obstore.store import S3Store
import os

_access_key_id = os.environ.get("AWS_ACCESS_KEY_ID")
_secret_access_key = os.environ.get("AWS_SECRET_ACCESS_KEY")
store = S3Store("my-bucket",
    region="us-east-1",
    access_key_id=_access_key_id,
    secret_access_key=_secret_access_key,
)"
`;
